[package]
name = "acc-khadas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ['full'] }
i2cdev = "0.6.0"
cpal = "0.15.2"
reqwest = { version = "0.11.22", features = ['blocking'] }
cross = "0.2.5"
